# xokernel

./: .gitignore  Cargo.toml  makefile
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  bit_array.rs  block_interface.rs  fs.rs  main.rs  pci.rs  virtio.rs
paper/: .gitignore  dataflow.dot  makefile  paper.tex  permissions.dot
src/: bit_array.rs  block_interface.rs  disk.rs  file_server.rs  fs.rs  main.rs  pci.rs  uart.rs  usb.rs  user_programs.rs  utils.rs  vga_buffer.rs  virtio.rs
tests/: .gitignore  Cargo.toml  makefile
tests/src/: array_vec.rs  block_interface.rs  fs.rs  linux_files.rs  main.rs  tests.rs
