[package]
name = "xokernel"
version = "0.1.0"
authors = ["julianknodt <julianknodt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
x86_64 = "0.13.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
