[package]
name = "xokernel"
version = "0.1.0"
authors = ["julianknodt <julianknodt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.16"
x86_64 = "0.13.2"
# uart_16550 = "0.2.12"
linked_list_allocator = "0.8.11"
bitflags = "1.2.1"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
run-command = [
  "qemu-system-x86_64",
  # the kernel itself
  "-drive", "format=raw,file={}",
  # additional drive for block device
  "-drive", "format=raw,if=none,file=disk,id=disk",
  # An extra virt-io device?
  "-device", "virtio-blk,drive=disk",
  # use UART driver or own window
  #"-nographic",
]
